In hover_effects.css, fixing the hover effect on images to adjust according to different resolutions. In index and style.css, adding welcome title above main search bar and adjusted image coloring to better contrast with white title text.

--- a/css/hover_effects.css
+++ b/css/hover_effects.css
@@ -1,12 +1,11 @@
 .hovereffect {
-  width: 100%;
-  height: 100%;
+/*  width: 100%;
+  height: 100%;*/
   float: left;
   overflow: hidden;
   position: relative;
   text-align: center;
   cursor: default;
-  font-family: 'Open-Sans', sans-serif;
 }
 
 .hovereffect .overlay {
@@ -64,7 +63,7 @@
 
 .hovereffect a, hovereffect p {
   color: #FFF;
-  /*padding: 1em 0;*/
+  padding: 1em 0;
   opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -79,7 +78,6 @@
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
-
 .hovereffect a.info {
   display: inline-block;
   text-decoration: none;
